add socket gems page

--- a/src/gems.html
+++ b/src/gems.html
@@ -54,7 +54,7 @@
                 Home
             </a>
 
-            <a class="navbar-item" href="/gems.html">
+            <a class="navbar-item" href="/gems">
                 Gems
             </a>
 
@@ -73,22 +73,20 @@
     </div>
 </nav>
 <div id="wrapper">
-    <section class="hero is-medium is-banner">
-        <div class="hero-body">
-            <div class="container">
-                <img src="./banner.png" alt="Faceland Banner"/>
-            </div>
-        </div>
-    </section>
-    <section class="hero">
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <h1 class="title">
-                    Play now at play.face.land
-                </h1>
-            </div>
-        </div>
-    </section>
+    <div class="container">
+        <h1 class="title is-1">Socket Gems</h1>
+        <table id="gem-table" class="table">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Item Groups</th>
+                <th>Effects</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
 </div>
 <footer class="footer">
     <div class="content has-text-centered">
@@ -101,5 +99,6 @@
     </div>
 </footer>
 <script type="application/javascript" src="./index.js"></script>
+<script type="application/javascript" src="./gems.js"></script>
 </body>
 </html>
