--- a/src/index.html
+++ b/src/index.html
@@ -62,12 +62,8 @@
                 Discord
             </a>
 
-            <a class="navbar-item" href="http://play.face.land:8135">
-                Dynmap
-            </a>
-
             <a class="navbar-item" href="https://plug.dj/faceland">
-                plug.dj
+                Plug.dj
             </a>
         </div>
     </div>
