--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                 Gems
             </a>
 
-            <a class="navbar-item" href="https://discord.gg/JxYJy5vf">
+            <a class="navbar-item" href="https://discord.gg/JxYJy5v">
                 Discord
             </a>
 
