--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <title>Faceland</title>
     <meta name="description" content="the great rpg with the dumb name"/>
 
-    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3.1.237/umd/crate.min.js" async defer>
       new Crate({
         server: '133012942890336256',
         channel: '518929289618653215',
