--- a/public/index.html
+++ b/public/index.html
@@ -5,31 +5,77 @@
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="Faceland"
-      content="The legendary Minecraft RPG with the stupid name!"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="theme-color" content="#1a1410" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <!-- Primary Meta Tags -->
+    <title>Faceland RPG - Free Minecraft MMORPG Server</title>
+    <meta name="title" content="Faceland RPG - Free Minecraft MMORPG Server" />
+    <meta name="description" content="Faceland is a free-to-play Minecraft MMORPG server featuring epic quests, custom classes, unique loot, dungeons, and raids. Experience MMO gameplay similar to World of Warcraft, Path of Exile, and Diablo in Minecraft. Join thousands of players today!" />
+    <meta name="keywords" content="Minecraft MMORPG, Minecraft RPG server, Faceland, free Minecraft server, MMO Minecraft, Minecraft quests, Minecraft dungeons, Minecraft raids, custom Minecraft server, Wynncraft alternative, Minecraft classes, action RPG Minecraft, multiplayer Minecraft RPG, Java Minecraft server" />
+    <meta name="author" content="Faceland" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://face.land/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://face.land/" />
+    <meta property="og:title" content="Faceland RPG - Free Minecraft MMORPG Server" />
+    <meta property="og:description" content="Faceland is a free-to-play Minecraft MMORPG featuring epic quests, custom classes, unique loot, dungeons, and raids. Experience MMO gameplay like World of Warcraft and Path of Exile in Minecraft!" />
+    <meta property="og:image" content="https://face.land/assets/images/og-image.jpg" />
+    <meta property="og:site_name" content="Faceland RPG" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://face.land/" />
+    <meta name="twitter:title" content="Faceland RPG - Free Minecraft MMORPG Server" />
+    <meta name="twitter:description" content="Faceland is a free-to-play Minecraft MMORPG featuring epic quests, custom classes, unique loot, dungeons, and raids. Join thousands of players today!" />
+    <meta name="twitter:image" content="https://face.land/assets/images/og-image.jpg" />
+    <meta name="twitter:site" content="@facelandr" />
+
+    <!-- Additional SEO -->
+    <meta name="application-name" content="Faceland RPG" />
+    <meta name="apple-mobile-web-app-title" content="Faceland RPG" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Faceland RPG</title>
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "VideoGame",
+      "name": "Faceland RPG",
+      "description": "A free-to-play Minecraft MMORPG server featuring epic quests, custom classes, unique loot, dungeons, and raids.",
+      "url": "https://face.land",
+      "genre": ["MMORPG", "Action RPG", "Adventure"],
+      "gamePlatform": "Minecraft Java Edition",
+      "applicationCategory": "Game",
+      "operatingSystem": "Windows, macOS, Linux",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Faceland",
+        "url": "https://face.land"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "ratingCount": "1000"
+      }
+    }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
