--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1a1410" />
 
@@ -39,7 +43,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
@@ -75,7 +78,7 @@
       "@context": "https://schema.org",
       "@type": "VideoGame",
       "name": "Faceland RPG",
-      "description": "A free-to-play Minecraft MMORPG server featuring epic quests, custom classes, unique loot, dungeons, and raids.",
+      "description": "A free-to-play Minecraft MMORPG server featuring epic quests, versatile classes, unique loot, dungeons, raids, guild PvP, and arenas! No mods required!",
       "url": "https://face.land",
       "genre": ["MMORPG", "Action RPG", "Adventure"],
       "gamePlatform": "Minecraft Java Edition",
@@ -89,7 +92,7 @@
       },
       "publisher": {
         "@type": "Organization",
-        "name": "Faceland",
+        "name": "Faceland LLC",
         "url": "https://face.land"
       },
       "aggregateRating": {
