Really ham it up with the SEO

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
 
     <!-- Primary Meta Tags -->
     <title>Faceland RPG - Free Minecraft MMORPG Server</title>
-    <meta name="title" content="Faceland RPG - Free Minecraft MMORPG Server" />
-    <meta name="description" content="Faceland is a free-to-play Minecraft MMORPG server featuring epic quests, custom classes, unique loot, dungeons, and raids. Experience MMO gameplay similar to World of Warcraft, Path of Exile, and Diablo in Minecraft. Join thousands of players today!" />
-    <meta name="keywords" content="Minecraft MMORPG, Minecraft RPG server, Faceland, free Minecraft server, MMO Minecraft, Minecraft quests, Minecraft dungeons, Minecraft raids, custom Minecraft server, Wynncraft alternative, Minecraft classes, action RPG Minecraft, multiplayer Minecraft RPG, Java Minecraft server" />
+    <meta name="title" content="Faceland RPG - Minecraft MMORPG Server" />
+    <meta name="description" content="Faceland is a free-to-play Minecraft MMORPG server featuring epic quests, custom classes, unique loot, dungeons, and raids. Experience MMO gameplay similar to World of Warcraft, Path of Exile, and Diablo... in Minecraft! Join hundreds of players today!" />
+    <meta name="keywords" content="Minecraft MMORPG, Minecraft RPG server, Faceland, free Minecraft server, MMO Minecraft, Minecraft quests, Minecraft dungeons, Minecraft raids, custom Minecraft server, Wynncraft alternative, Diablo Minecraft, Path Of Exile Minecraft, World Of Warcraft Minecraft, Runescape Minecraft, OSRS Minecraft, Minecraft classes, action RPG Minecraft, multiplayer Minecraft RPG, Java Minecraft server, Guild PvP, No Mods, Mods, Vanilla" />
     <meta name="author" content="Faceland" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://face.land/" />
