Fix react snap recommendations

--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Faceland RPG</title>
+    <title>404 - Faceland RPG</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
