Added embed logo

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <meta property="og:url" content="https://face.land/" />
     <meta property="og:title" content="Faceland RPG - Free Minecraft MMORPG Server" />
     <meta property="og:description" content="Faceland is a free-to-play Minecraft MMORPG featuring epic quests, custom classes, unique loot, dungeons, and raids. Experience MMO gameplay like World of Warcraft and Path of Exile in Minecraft!" />
-    <meta property="og:image" content="https://face.land/assets/images/og-image.jpg" />
+    <meta property="og:image" content="https://face.land/assets/embed_logo.png" />
     <meta property="og:site_name" content="Faceland RPG" />
     <meta property="og:locale" content="en_US" />
 
@@ -34,7 +34,7 @@
     <meta name="twitter:url" content="https://face.land/" />
     <meta name="twitter:title" content="Faceland RPG - Free Minecraft MMORPG Server" />
     <meta name="twitter:description" content="Faceland is a free-to-play Minecraft MMORPG featuring epic quests, custom classes, unique loot, dungeons, and raids. Join thousands of players today!" />
-    <meta name="twitter:image" content="https://face.land/assets/images/og-image.jpg" />
+    <meta name="twitter:image" content="https://face.land/assets/embed_logo.png" />
     <meta name="twitter:site" content="@facelandr" />
 
     <!-- Additional SEO -->
