More SEO and niche fixes

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
       }(window.location))
     </script>
 
-    <!-- JSON-LD Structured Data -->
+    <!-- JSON-LD Structured Data - VideoGame -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -102,6 +102,28 @@
         "@type": "AggregateRating",
         "ratingValue": "4.8",
         "ratingCount": "1000"
+      }
+    }
+    </script>
+
+    <!-- JSON-LD Structured Data - Organization -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Faceland LLC",
+      "alternateName": "Faceland RPG",
+      "url": "https://face.land",
+      "logo": "https://face.land/assets/embed_logo.png",
+      "description": "Creators of Faceland RPG, a free-to-play Minecraft MMORPG server.",
+      "sameAs": [
+        "https://twitter.com/facelandr",
+        "https://discord.gg/Gkmk6G2fjd"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "customer support",
+        "email": "official.faceland@gmail.com"
       }
     }
     </script>
